// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message Should render Message component with additional classname: Message with additionalClassName 1`] = `
<div
  className="message additionalClassName"
>
  <div
    className="message__body"
  >
    <Avatar
      name="name"
      src=""
    />
    <div
      className="message__data"
    >
      <Component
        customStyles="message__author"
        numberOfLines={1}
        type="h4"
      >
        name
      </Component>
      <div
        className="message__content"
      >
        <Component
          customStyles="message__content-item message__content-item--text"
          numberOfLines={1}
          size="XS"
          type="mixed"
        >
          text
        </Component>
      </div>
    </div>
    <div
      className="message__date"
    >
      <Component
        customStyles="message__date-text"
        numberOfLines={1}
        size="XS"
        type="mixed"
      >
        Invalid Date
      </Component>
    </div>
  </div>
</div>
`;

exports[`Message Should render Message component with created date: Message with created date 1`] = `
<div
  className="message"
>
  <div
    className="message__body"
  >
    <Avatar
      name="name"
      src=""
    />
    <div
      className="message__data"
    >
      <Component
        customStyles="message__author"
        numberOfLines={1}
        type="h4"
      >
        name
      </Component>
      <div
        className="message__content"
      >
        <Component
          customStyles="message__content-item message__content-item--text"
          numberOfLines={1}
          size="XS"
          type="mixed"
        >
          text
        </Component>
      </div>
    </div>
    <div
      className="message__date"
    >
      <Component
        customStyles="message__date-text"
        numberOfLines={1}
        size="XS"
        type="mixed"
      >
        Invalid Date
      </Component>
    </div>
  </div>
</div>
`;

exports[`Message Should render Message component with file: Message with file 1`] = `
<div
  className="message"
>
  <div
    className="message__body"
  >
    <Avatar
      name="name"
      src=""
    />
    <div
      className="message__data"
    >
      <Component
        customStyles="message__author"
        numberOfLines={1}
        type="h4"
      >
        name
      </Component>
      <div
        className="message__content"
      >
        <Component
          customStyles="message__content-item message__content-item--text"
          numberOfLines={1}
          size="XS"
          type="mixed"
        >
          text
        </Component>
        <div
          className="message__content-item"
        >
          <FileLink
            link="doc.pdf"
          />
        </div>
      </div>
    </div>
    <div
      className="message__date"
    >
      <Component
        customStyles="message__date-text"
        numberOfLines={1}
        size="XS"
        type="mixed"
      >
        Invalid Date
      </Component>
    </div>
  </div>
</div>
`;

exports[`Message Should render Message component with image: Message with image 1`] = `
<div
  className="message"
>
  <div
    className="message__body"
  >
    <Avatar
      name="name"
      src=""
    />
    <div
      className="message__data"
    >
      <Component
        customStyles="message__author"
        numberOfLines={1}
        type="h4"
      >
        name
      </Component>
      <div
        className="message__content"
      >
        <Component
          customStyles="message__content-item message__content-item--text"
          numberOfLines={1}
          size="XS"
          type="mixed"
        >
          text
        </Component>
        <img
          alt="image.png"
          className="message__content-item message__content-item--image"
          src="image.png"
        />
      </div>
    </div>
    <div
      className="message__date"
    >
      <Component
        customStyles="message__date-text"
        numberOfLines={1}
        size="XS"
        type="mixed"
      >
        Invalid Date
      </Component>
    </div>
  </div>
</div>
`;

exports[`Message Should render Message component without text: Message without text 1`] = `
<div
  className="message"
>
  <div
    className="message__body"
  >
    <Avatar
      name="name"
      src=""
    />
    <div
      className="message__data"
    >
      <Component
        customStyles="message__author"
        numberOfLines={1}
        type="h4"
      >
        name
      </Component>
      <div
        className="message__content"
      />
    </div>
    <div
      className="message__date"
    >
      <Component
        customStyles="message__date-text"
        numberOfLines={1}
        size="XS"
        type="mixed"
      >
        Invalid Date
      </Component>
    </div>
  </div>
</div>
`;

exports[`Message Should render Message component: Message 1`] = `
<div
  className="message"
>
  <div
    className="message__body"
  >
    <Avatar
      name="name"
      src=""
    />
    <div
      className="message__data"
    >
      <Component
        customStyles="message__author"
        numberOfLines={1}
        type="h4"
      >
        name
      </Component>
      <div
        className="message__content"
      >
        <Component
          customStyles="message__content-item message__content-item--text"
          numberOfLines={1}
          size="XS"
          type="mixed"
        >
          text
        </Component>
      </div>
    </div>
    <div
      className="message__date"
    >
      <Component
        customStyles="message__date-text"
        numberOfLines={1}
        size="XS"
        type="mixed"
      >
        Invalid Date
      </Component>
    </div>
  </div>
</div>
`;
